--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
         </li>
     </ul>
     <p>Please let me know if this is ok, and if so which start date you would prefer.</p>
-    <p>You can find more information about important university dates on our website.</p>
+    <p>You can find more information about 
+        <a
+        href="http://example.com"
+        title="Iportant Unniversity dates"
+        >
+        important university dates
+        </a>
+        on our website.</p>
     
     <h2>Subjects of study</h2>
     <p>At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
@@ -71,8 +78,14 @@
         <dt>Arctic robot dance</dt>
         <dd>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
     </dl>
-    <p>For more of my research, see my exotic dance research page.</p>
-
+    <p>For more of my research, see my 
+        <a
+        href="http://example.com"
+        title="Exotic dance research"
+        >
+        exotic dance research page.
+    </a>
+    </p>
     <p>Yours sincerely,</p>
     <p>Dr Eleanor Gaye</p>
     <p>University of Awesome motto: "Be awesome to each other." --<i>The memoirs of Bill S Preston, <abbr title="Esquire">Esq</abbr></i></p>
