--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
     </p>
     <p>Yours sincerely,</p>
     <p>Dr Eleanor Gaye</p>
-    <p>University of Awesome motto: "Be awesome to each other." --<i>The memoirs of Bill S Preston, <abbr title="Esquire">Esq</abbr></i></p>
+    <p><cite>University of Awesome motto: "Be awesome to each other." --<i>The memoirs of Bill S Preston, <abbr title="Esquire">Esq</abbr></i></cite></p>
 </body>
 </html>
