--- a/index.html
+++ b/index.html
@@ -5,6 +5,40 @@
     <meta name="Dr. Eleanor Gaye" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Letter</title>
+    <style>
+    body {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.sender-column {
+    text-align: right;
+}
+
+h1 {
+    font-size: 1.5em;
+}
+
+h2 {
+    font-size: 1.3em;
+}
+
+p,
+ul,
+ol,
+dl,
+address {
+    font-size: 1.1em;
+}
+
+p,
+li,
+dd,
+dt,
+address {
+    line-height: 1.5;
+}
+</style>
 </head>
 <body>
     <address>
